Set up CircleCI

--- a/dist.ini
+++ b/dist.ini
@@ -3,37 +3,45 @@ author           = Meredith Howard <mhoward@cpan.org>
 license          = Perl_5
 copyright_holder = Meredith Howard
 
-[@GitHub]
-metacpan = 1
+[Prereqs::FromCPANfile]
 
-[MetaJSON]
+[PodWeaver]
+; authordep Pod::Elemental::Transformer::List
+
+;;;;;;;;;;
 [@Git]
+allow_dirty = dist.ini
+allow_dirty = Changes
+allow_dirty = README.md
+
 [Git::NextVersion]
+first_version = 0.01
+
 [Git::GatherDir]
 exclude_filename = Changes
+exclude_filename = README.md
+
+[ChangelogFromGit::CPAN::Changes]
+
+[GitHub::Meta]
+
+[MinimumPerlFast]
 
 [@Filter]
 -bundle = @Basic
--remove = Readme
 -remove = GatherDir
 
-[AutoPrereqs]
-skip = ^Types::Standard|Type::Tiny::Class$
-
-[Prereqs]
-perl = 5.8.6
-Moo = 1.00600
+[MetaJSON]
 
 [PkgVersion]
 
 [MetaProvides::Package]
 inherit_version = 1
 
-[PodWeaver]
-
 [ReadmeAnyFromPod]
-
-[ChangelogFromGit::CPAN::Changes]
+filename = README.md
+location = root
+type = markdown
 
 [Clean]
 
